swap bootstrap-multiselect for bootstrap-select, fix overflow

--- a/custom.css
+++ b/custom.css
@@ -100,7 +100,7 @@ html, body,  #map{
     z-index: 10000;
     max-width: 20%;
     max-height: calc(100% - 90px);
-    overflow: auto;
+    overflow: visible;
     left: 10px;
     top: 80px;
     position: absolute;
